<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="20dip" >

        <TableRow android:layout_marginTop="20dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginLeft="20dip"
                android:text="@string/name"
                android:textColor="#000000"
                android:textSize="20sp" >
            </TextView>

            <EditText
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:background="@drawable/edit_text_holo_light"
                android:inputType="text" >
            </EditText>
        </TableRow>

        <TableRow android:layout_marginTop="20dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:text="@string/who"
                android:textColor="#000000"
                android:textSize="20sp" >
            </TextView>

            <EditText
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:background="@drawable/edit_text_holo_light"
                android:inputType="text" >
            </EditText>
        </TableRow>

        <TableRow android:layout_marginTop="20dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:text="@string/phone1"
                android:textColor="#000000"
                android:textSize="20sp" >
            </TextView>

            <EditText
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:background="@drawable/edit_text_holo_light"
                android:inputType="phone" >
            </EditText>
        </TableRow>

        <TableRow android:layout_marginTop="20dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:text="@string/phone2"
                android:textColor="#000000"
                android:textSize="20sp" >
            </TextView>

            <EditText
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:background="@drawable/edit_text_holo_light"
                android:inputType="phone" >
            </EditText>
        </TableRow>
    </TableLayout>

</LinearLayout>