<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dip" >

        <TableRow android:layout_marginTop="10dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginLeft="20dip"
                android:text="@string/medication"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" >
            </TextView>

            <EditText
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:inputType="text" >
            </EditText>
        </TableRow>

        <TableRow android:layout_marginTop="10dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginLeft="20dip"
                android:text="@string/dose"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" >
            </TextView>

            <EditText
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:inputType="text" >
            </EditText>
        </TableRow>

        <TableRow android:layout_marginTop="10dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginLeft="20dip"
                android:text="@string/frequency"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" >
            </TextView>

            <EditText
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:inputType="text" >
            </EditText>
        </TableRow>
    </TableLayout>

</LinearLayout>